Add copyright info

--- a/zenburn-care.codeblocks.conf
+++ b/zenburn-care.codeblocks.conf
@@ -4,10 +4,10 @@
 
 <!-- Copyright (c) 2014 Pavel Matcula -->
 
-<!-- Author: Pavel Matcula (M4E5TR0) <dev.plvlml@gmail.com> -->
+<!-- Author: Pavel Matcula (M4E5TR0) <dev dot plvlml at google mail> -->
 <!-- URL: https://github.com/dev-plvlml/zenburn-care -->
 
-<!-- Original author: Jani Nurminen (slinky) -->
+<!-- Original author: Jani Nurminen (slinky) <slinky at iki dot fi> -->
 <!-- Original URL: https://github.com/jnurmine/zenburn -->
 
 <CodeBlocksConfig version="1">
